# p4kvm-esp32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  capture.c  capture.h  capture_hw.c  capture_mjpeg.c  capture_priv.h  ethernet.c  ethernet.h  http_server.c  http_server.h  idf_component.yml  index.html  jpeg_frame.c  jpeg_frame.h  main.c  p4kvm_hw_defaults.h  tc358743.c  tc358743.h  tc358743_edid_1080p30.h  tc358743_hdmi_debug.h  usb_hid.c  usb_hid.h
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js  style.css
